# libpiper

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md
examples/file-server/: main.cpp
examples/simple-client/: main.c
examples/simple-server/: main.c
include/libpiper/: client.h  common.h  server.h
src/: client.c  common.c  server.c
tests/: CMakeLists.txt
tests/src/: basic.c  url-parsing.c  url-resolution.c
